@@ -14,14 +14,14 @@ typographical expertise.
 <dl>
   
   <dt>
-    Sat Aug 2 2003
+    August 2, 2003
   </dt>
   <dd>
     Website: almost there...
   </dd>
   
   <dt>
-    Wed Jul 30 2003
+    July 30, 2003
   </dt>
   <dd>
     Website: present <a href=background/introduction.html>treatise</a>
@@ -30,7 +30,7 @@ typographical expertise.
   </dd>
   
   <dt>
-    Tue Jul 29 2003
+    July 29, 2003
   </dt>
   <dd>
     1.7.29 - release candidate 4 has been released.  Packages for
@@ -40,22 +40,3 @@ typographical expertise.
 </dl>
 </p>
 <p align=right><a href=about/news/>more news...</a></p>
-
-<!table border=0 width=100%>
-  <!tr>
-    <!td width=10%>&nbsp;<!/td>
-    <!td><!a href=switch><!img src=switch.png alt=switch><!/a><!/td>
-    <!td><!a href=background><!img src=why.png alt=why?><!/a><!/td>
-    <!td><!a href=download><!img src=download.png alt=download><!/a><!/td>
-    <!td><!a href=use><!img src=help.png alt=help><!/a><!/td>
-    <!td width=10%>&nbsp;<!/td>
-  <!/tr>
-  <!tr>
-    <!td width=10%>&nbsp;<!/td>
-    <!td><!a href=switch>switch!<!/a><!/td>
-    <!td><!a href=background>why?<!/a><!/td>
-    <!td><!a href=download>download<!/a><!/td>
-    <!td><!a href=use>help<!/a><!/td>
-    <!td width=10%>&nbsp;<!/td>
-  <!/tr>
-<!/table>
