@@ -1,3 +1,9 @@
+2003-08-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* format-page.py (one_tab): add > before Home. Setup commit
+	diffing.
+	
+
 2003-08-02  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* Mods.
